# Projeto-Base

./: .coverage  .env  .gitignore  Dockerfile  compose.yaml  database.db  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
backend/: app.py  database.py  models.py  schemas.py  security.py  settings.py
backend/routes/: auth.py  todolist.py  users.py
migrations/: env.py
migrations/versions/: 1553d0398611_alter_state_of_table_todo_for_enum.py  3f719f1db0cf_create_users_table.py  64aa0a4f89fd_alter_table_todo_state_attribute.py  6b00724f889d_create_fields_created_at_and_updated_at_.py  90e87d4d1ba4_added_account_table.py  c7897591c47b_create_todolist_table.py  d45882eac145_create_users_and_to_do_list_tables.py  deb41349951f_include_updated_at.py
tests/: conftest.py  test_app.py  test_auth.py  test_database.py  test_todo.py  test_token.py  test_users.py
